--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 nav {
     background-color: #333;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
   }
   
   ul {
@@ -9,7 +9,7 @@ nav {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content:end;
+    justify-content: flex-end;
   }
   
   li {
